@@ -1,8 +1,6 @@
 #ifndef OIDC_SETTINGS_H
 #define OIDC_SETTINGS_H
 
-#include "utils/colors.h"
-
 // env var names
 #define OIDC_SOCK_ENV_NAME "OIDC_SOCK"
 #define OIDC_PID_ENV_NAME "OIDCD_PID"
@@ -16,23 +14,6 @@
 #define MAX_PASS_TRIES 3
 #define MAX_POLL 10
 #define DELTA_POLL 1000  // milliseconds
-
-// Colors
-#ifdef NO_COLOR
-#define C_ERROR C_RESET
-#define C_PROMPT C_RESET
-#define C_IMPORTANT C_RESET
-#else
-#ifndef C_ERROR
-#define C_ERROR C_RED
-#endif
-#ifndef C_PROMPT
-#define C_PROMPT C_CYN
-#endif
-#ifndef C_IMPORTANT
-#define C_IMPORTANT C_YEL
-#endif
-#endif  // NO_COLOR
 
 #define CONF_ENDPOINT_SUFFIX ".well-known/openid-configuration"
 
