@@ -10,6 +10,21 @@
 #define C_WHT "\x1B[37m"
 #define C_RESET "\x1B[0m"
 
-int printError(char* fmt, ...);
+// Setting colors
+#ifndef C_ERROR
+#define C_ERROR C_RED
+#endif
+#ifndef C_PROMPT
+#define C_PROMPT C_CYN
+#endif
+#ifndef C_IMPORTANT
+#define C_IMPORTANT C_YEL
+#endif
+
+#include <stdarg.h>
+
+int printErrorColored(char* fmt, va_list args);
+int printPromptColored(char* fmt, va_list args);
+int printImportantColored(char* fmt, va_list args);
 
 #endif  // OIDC_COLORS_H
